@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Switched from the now deprecated MetaCPAN::API to the shiny new
+  MetaCPAN::Client. Patch by Mickey. PR #7.
+
+
 0.18   2014-05-04
 
 - A distro which used Module::Build and ran no tests would be marked as
